--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,7 +11,19 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display:flex;
+  justify-content: center;
 }
+
+.plant {
+  display: flex;
+ 
+  justify-content: center;
+  gap: 52px;
+  padding: 8px;
+}
+
+
 
 /* do not edit this footer */
 .footer {
