--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,10 +5,14 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
   width: 600px;
+
 }
 
 button {
@@ -16,6 +20,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
+  
 }
 
 input {
@@ -24,4 +30,29 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul { 
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  display: inline-block;
+  padding: 8px;
+}
+
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+}
+.footer{
+  background-color: #eee;
+}
+a {
+  color: rgb(82, 77, 77);
+  text-decoration: none;
+}
+.content {
+text-align: center;
 }
